# sandpit

./: LICENSE  README.md
VHDL/: .gitignore
VHDL/GOL_simple/: .gitignore  Makefile  README.md  board.vhdl  board_config.vhdl  cell.vhdl  test_board.vhdl  test_board_read.vhdl  test_cell.vhdl  test_multicell.vhdl  test_multicell_boundaries.vhdl
VHDL/GOL_simple/test_inputs/: glider_12x12.bif  glider_6x6_t0.bif  glider_6x6_t1.bif  glider_6x6_t2.bif  glider_6x6_t3.bif  glider_6x6_t4.bif
VHDL/adder/: Makefile  adder.vhdl  test_adder.vhdl
VHDL/clocked_enable/: .gitignore  Makefile  clocked_enable.vhdl  test_clocked_enable.vhdl
VHDL/data_types/: .gitignore  Makefile  test_array.vhdl  test_records.vhdl  test_slv.vhdl  test_typecasts.vhdl
VHDL/dual_port_vram/: ram.vhdl  test_ram.vhdl
VHDL/fifo/: .gitignore  Makefile
VHDL/file_rom/: .gitignore  Makefile  init_funcs.vhdl  rom.vhdl  rom_lut.mif  test_init_funcs.vhdl  test_rom.vhdl
VHDL/flexible_single_port_ram/: .gitignore  Makefile  file_ram.vhdl  ram.vhdl  test_file_ram.vhdl  test_ram.vhdl
VHDL/generic_single_port_ram/: Makefile  ram.vhdl  test_ram.vhdl
VHDL/image_read/: .gitignore  Makefile  example.pgm  pgm_types.vhdl  read_funcs.vhdl  test_read_funcs.vhdl
VHDL/mux/: .gitignore  Makefile  mux.vhdl  test_mux.vhdl
VHDL/rom/: .gitignore  Makefile  memory_types.vhdl  rom.vhdl  test_rom.vhdl
VHDL/state_machine/: .gitignore  Makefile  test_three_multiple.vhdl  three_multiple.vhdl  three_multiple_types.vhdl
VHDL/stencil_buffer/: .gitignore  Makefile  ring_buffer.vhdl  stencil_buffer.vhdl  test_stencil_buffer.vhdl
VHDL/stencil_buffers/: .gitignore  Makefile  ripple_buffer.vhdl  test_ring_buffer.vhdl  test_ripple_buffer.vhdl
VHDL/striped_gol/: gol_processor.vhdl  gol_ram.vhdl  test_gol_processor.vhdl  test_gol_ram.vhdl  test_sequencer.vhdl
VHDL/tdma_bus/: .gitignore  Makefile  README.md  bus_writer.vhdl  byte_bus.vhdl  test_bus_writer.vhdl  test_byte_bus.vhdl
VHDL/test_utils/: .gitignore  Makefile  test_test_utils.vhdl  test_utils.vhdl
VHDL/testbenches/: Makefile  testbench.vhdl
VHDL/vga_bindisplay/: .gitignore  Makefile  init_funcs.vhdl  memory_types.vhdl  test_init_funcs.vhdl  test_vga_rom.vhdl  test_vga_sequencer.vhdl  vga_rom.vhdl  vga_system.vhdl
VHDL/vga_bindisplay/images/: f14.mif
VHDL/vga_gol/: .gitignore  Makefile  glu.vhdl  gol_controller.vhdl  sequencer.vhdl  test_glu.vhdl  test_sequencer.vhdl
VHDL/vga_imdisplay/: .gitignore  Makefile  init_funcs.vhdl  memory_types.vhdl  test_init_funcs.vhdl  test_vga_controller  test_vga_controller.vhdl  test_vga_rom.vhdl  test_vga_system.vhdl  vga_controller.vhdl  vga_rom.vhdl  vga_sequencer.vhdl  vga_system.vhdl
VHDL/vga_imdisplay/images/: f14.mif  f14.pgm
VHDL/vga_solid_color/: test_vga_controller.vhdl  vga_controller.vhdl
c/cat/: Makefile  README.md
c/cat/src/: main.c
c/deqn/src/: CMakeLists.txt  main.c  main.h
c/fileio/: main.c
c/hdf5/basic/src/: CMakeLists.txt  main.c
c/hdf5/lite/src/: CMakeLists.txt  main.c
c/karman/: .gitignore  Makefile  colcopy.c
c/penguincrap/: .gitignore  Makefile  main.c  sampling.c  sampling.h
c/penguincrap/reference/: getRawPower9.5.c
c/reverse_polish_notation/: Makefile
c/reverse_polish_notation/basic/: Makefile  README.md
cpp/file_io/: main.cc
cpp/file_io/src/: CMakeLists.txt  main.cc
cpp/file_io/src/tools/: CMakeLists.txt  sources.cc
cpp/hdf5/basic/src/: CMakeLists.txt  main.cc
cpp/hdf5/strided_read/src/: CMakeLists.txt  main.cc
gnuplot/basic/: line.gpl  sample.csv
gnuplot/db/: .gitignore  driver.rb  example  heatmap.gpl  price.gpl
gnuplot/heatmap/: heatmap.gpl  heatmap.gpl.bkp
go/spi/: main.go
go/structuring/: main.go  person.go
json/jq_templates/: bins.json  rodinia-euler-streamsub.sh  templater.sh
latex/bibtex/: bibleography.bib  main.tex
latex/enron_report/: .gitignore  Makefile  main.tex
opencl/cpp/deqn/src/: .gitignore  CMakeLists.txt  OpenCL.h  input_file.cc  input_file.h  main.cc  simulation.cc  simulation.h  sources.cc  sources.h
opencl/cpp/deqn/src/kernels/: deqn.cl
opencl/cpp/deqn/src/testcases/: CMakeLists.txt  basic.h5  runtests.sh
opencl/cpp/vecadd/src/: CMakeLists.txt  fpcompare.h  main.cc  sources.cc  vecadd_config.h.in
opencl/cpp/vecadd/src/kernels/: vecadd.cl
opencl/drdobbs_intro/: Makefile
python/aspect/: answer.py  filtered.csv  spec.tex
python/enron_network/: .gitignore  graph_parse.py  inner_aliases.json  networker.py  networker_old.py
python/generators/: combining.py
python/grid_puzzle/: board.csv  colspec.csv  combinatorial.py  main.py  rowspec.csv  voom
python/lightstrip/: lights.py  readme.txt
python/memoize_decorator/: fib.py
ruby/caserange/: range.rb
ruby/prime_benchmark/: primes.rb
(+109 files in other folders)
